# Styx-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
assets/shaders/: main.vert
game/include/: game.hpp
game/src/: game.cpp
include/: dll_export.h
include/core/: EngineFacade.hpp  WindowManager.hpp
include/game/: Game.hpp
include/graphics/: RendererManager.hpp  ShaderFactory.hpp  ShaderProgram.hpp  Texture2D.hpp
include/utils/: shader_reader.h
libs/glad/: glad.c
platform/include/core/: Application.hpp  WindowManager.hpp
platform/include/graphics/: Renderer.hpp  RendererManager.hpp  ShaderProgram.hpp  ShaderProgramBuilder.hpp  Texture2D.hpp
platform/src/: main.cpp
platform/src/core/: WindowManager.cpp
platform/src/graphics/: Renderer.cpp  RendererManager.cpp  ShaderProgramBuilder.cpp  Texture2D.cpp
ressources/shaders/: main.frag  main.vert
src/core/: EngineFacade.cpp  WindowManager.cpp
src/game/: Game.cpp
src/graphics/: RendererManager.cpp  ShaderProgram.cpp  ShaderProgramBuilder.cpp  stb_image.cpp
